--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@account-kit/core": "^4.9.0",
-    "@account-kit/infra": "^4.9.0",
-    "@account-kit/react": "^4.9.0",
-    "@tanstack/react-query": "^5.50.1",
+    "@account-kit/infra": "^4.20.1",
+    "@account-kit/react": "^4.19.0",
+    "@account-kit/smart-contracts": "^4.20.1",
+    "@reown/walletkit": "^1.2.3",
+    "@tanstack/react-query": "^5.69.0",
+    "@walletconnect/core": "^2.19.2",
+    "@walletconnect/utils": "^2.19.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
